Bug 147459 - EDITING PPTX glue points are not displayed in the connectors menu
Summary: EDITING PPTX glue points are not displayed in the connectors menu
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.4.0
Keywords: filter:pptx
Depends on:
Blocks:
 
Reported: 2022-02-16 12:21 UTC by NISZ LibreOffice Team
Modified: 2022-03-10 10:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
PPTX glue points are not displayed in the connectors menu (44.08 KB, image/jpeg)
2022-02-16 12:26 UTC, NISZ LibreOffice Team
Details
Example file (32.90 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-02-16 12:27 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-02-16 12:21:49 UTC
Description:
After loading the pptx file (which contains a shape), if you click on the Connectors menu, the so-called "glue points" should appear, as we can be used to connect two shapes to a connector shape.

Steps to Reproduce:
1.Open attached file
2.Click the connectors menu


Actual Results:
Glue points don’t appear.

Expected Results:
The glue points.should appear on the shape. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 11a3e5707d6b524728b24e170eb542bba273d811
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2022-02-16 12:26:03 UTC
Created attachment 178304 [details]
PPTX glue points are not displayed in the connectors menu
Comment 2 NISZ LibreOffice Team 2022-02-16 12:27:58 UTC
Created attachment 178305 [details]
Example file
Comment 3 Commit Notification 2022-03-01 12:46:15 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/744e6c0b758fefe6011f09860b44f03ab70fbcfe

tdf#147459 PPTX: add "glue points" to some basic shapes

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-03-10 10:07:12 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6adabd915d931b845fcf2fef15fbf3fca14ec9b3
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded