tdf#147459 PPTX: add "glue points" to some basic shapes

(ellipse, triangle, right triangle, trapezoid, parallelogram,
 diamond, pentagon, hexagon, heptagon, octagon)

Change-Id: Iaef21ce8dc3f6677fa2fd6a484adf6d546e72ad1